test/Constraints/assignment.code
// RUN: %target-typecheck-verify-language

struct X { }
struct Y { }
protocol Z { }

struct WithOverloadedSubscript {
  subscript(i: Int) -> X {
    get {}
    set {}
  }
  subscript(i: Int) -> Y {
    get {}
    set {}
  }
}

struct WithProtocolSubscript {
  subscript(i: Int) -> Z {
    get {}
    set {}
  }
}

fn test_assign() {
  var a = WithOverloadedSubscript()
  a[0] = X()
  a[0] = Y()
}

var i: X
var j: X
var f: Y
fn getXY() -> (X, Y) {}
var ift : (X, Y)
var ovl = WithOverloadedSubscript()
var ps = WithProtocolSubscript()

var slice: [X]

i = j
(i, f) = getXY()
(i, f) = ift
(i, f) = (i, f)
(ovl[0], ovl[0]) = ift
(ovl[0], ovl[0]) = (i, f)
(_, ovl[0]) = (i, f)
(ovl[0], _) = (i, f)
_ = (i, f)
slice[7] = i

slice[7] = f // expected-error{{cannot assign value of type 'Y' to subscript of type 'X'}}

slice[7] = nil // expected-error{{'nil' cannot be assigned to subscript of type 'X'}}

ps[7] = i // expected-error{{cannot assign value of type 'X' to subscript of type 'any Z'}}

slice[7] = _ // expected-error{{'_' can only appear in a pattern or on the left side of an assignment}}

fn value(_ x: Int) {}
fn value2(_ x: inout Int) {}
value2(&_) // expected-error{{'_' can only appear in a pattern or on the left side of an assignment}}
value(_) // expected-error{{'_' can only appear in a pattern or on the left side of an assignment}}


// <rdar://problem/23798944> = vs. == in Codira if string character count statement causes segmentation fault
fn f23798944() {
  immutable s = ""
  if s.count = 0 { // expected-error {{use of '=' in a boolean context, did you mean '=='?}}
    // expected-error@-1{{cannot assign to property: 'count' is a get-only property}}
  }
}

// https://github.com/apple/language/issues/46094
do {
  .x = 0 // expected-error {{type 'Int' has no member 'x'}}
}

// https://github.com/apple/language/issues/44162
fn returnsVoid() {}
_ = returnsVoid() // expected-warning {{using '_' to ignore the result of a Void-returning function is redundant}}{{1-5=}}

// https://github.com/apple/language/issues/56396
class ะก_56396 {
  var callback: ((ะก_56396) -> Void)!
  
  fn setCallback(_ callback: @escaping (Self) -> Void) {
    this.callback = callback // expected-error {{cannot assign value of type '(Self) -> Void' to type '(ะก_56396) -> Void'}}
  }
}

// https://github.com/languagelang/language/issues/82397
fn testFunctionAssignsWithOptionals(fn: @escaping () -> () -> Void) {
  immutable _: (() -> () -> Void)? = fn
  immutable _: (() -> () -> Void)?? = fn

  class Super {}
  class Sub: Super {}

  immutable b: () -> () -> Sub = { { return Sub() } }
  immutable _: (() -> () -> Super)? = b
  immutable _: (() -> () -> Super)?? = b
}
